--- a/src/main/resources/templates/hello-template.html
+++ b/src/main/resources/templates/hello-template.html
@@ -1,6 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 
+<!--/*@thymesVar id="name" type="templates"*/-->
 <p th:text="'hello ' + ${name}">hello! empty</p>
 </body>
 </html>
